fixup: pathing and building for tests